<resources>
    <string name="app_name">Skate Shop</string>
    <string name="title">Skate Shop</string>
    <string name="hint_email">Email</string>
    <string name="hint_pass">Password</string>
    <string name="hint_name">Name</string>
    <string name="bt_singin">Log In</string>
    <string name="signUp">Sign Up</string>
    <string name="singUp_helper">No have a account? Register.</string>
    <string name="loading">Loading...</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="product_image">Product Image</string>
    <string name="description_img_product">Image product</string>
    <string name="checkout">Checkout</string>
    <string name="clear_all">Clear all</string>
    <string name="find_zip">Find ZIP</string>
    <string name="zip">ZIP</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="done">done</string>
    <string name="thank_for_order">Thank you for your order !!</string>
    <string name="logo_image">logo image</string>
    <string name="subtitle_splashscreen">Search your favorite skate.</string>
    <string name="img_splashscreen">img splashscreen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_brand">Choose Brand</string>
    <string name="element_products">Element products</string>
</resources>