<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_singup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/signUp"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/container_form"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_singup" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/edit_text_login"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:maxLines="1"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="@id/container_form"
            app:layout_constraintStart_toStartOf="@id/container_form"
            app:layout_constraintTop_toTopOf="@id/container_form" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_login"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="@id/container_form"
            app:layout_constraintStart_toStartOf="@id/container_form"
            app:layout_constraintTop_toBottomOf="@id/edit_name" />

        <EditText
            android:id="@+id/edit_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/edit_text_login"
            android:hint="@string/hint_pass"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="@id/container_form"
            app:layout_constraintStart_toStartOf="@id/container_form"
            app:layout_constraintTop_toBottomOf="@id/edit_email" />

        <Button
            android:id="@+id/bt_singUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:backgroundTint="@color/gray"
            android:padding="15dp"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/container_form"
            app:layout_constraintEnd_toEndOf="@id/container_form"
            app:layout_constraintStart_toStartOf="@id/container_form"
            app:layout_constraintTop_toBottomOf="@id/edit_pass" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>